--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,18 @@
 
 <head>
   <meta charset="utf-8" />
+  <link rel="shortcut icon" href="./images/logo.png" type="image/png">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="theme-color" content="#000000">
+  <meta name="description" content="Modern PWA React Application" />
+  <link rel="apple-touch-icon" href="./images/logo.png">
+  <link rel="manifest" href="./manifest.json">
   <style>
     * {
       margin: 0;
     }
   </style>
-  <title>React App</title>
+  <title>Weather App</title>
 </head>
 
 <body>
